--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -18,7 +18,7 @@
 
 $primary-color: #2199e8;
 $secondary-color: #777777;
-$success-color: #3adb76;
+$success-color: #009D90;
 $warning-color: #ffae00;
 $alert-color: #ec5840;
 $light-gray: #f3f3f3;
@@ -55,7 +55,7 @@ $block-grid-gutter: $global-gutter;
 // -------------
 
 $global-font-color: $black;
-$body-font-family: Helvetica, Arial, sans-serif;
+$body-font-family: 'Work Sans', sans-serif;
 $global-font-weight: normal;
 $header-color: inherit;
 $global-line-height: 1.3;
@@ -145,3 +145,6 @@ $thumbnail-shadow-hover: 0 0 6px 1px rgba($primary-color, 0.5);
 $thumbnail-transition: box-shadow 200ms ease-out;
 $thumbnail-radius: $global-radius;
 
+// 9. Custom Buttons
+$teal-color: #009D90;
+$footer-text: #C7CFD9;
