--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro:400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap');
 @import 'settings';
 @import 'foundation-emails';
 
